porting to AXSharp and merge with messaging

--- a/src/core/tests/ix.famework.core.tests/ix.framework.core.tests.csproj
+++ b/src/core/tests/ix.famework.core.tests/ix.framework.core.tests.csproj
@@ -25,14 +25,14 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ix.framework.core\ix_ax_ix_framework_core.csproj" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<None Update="xunit.runner.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\ix.framework.core\_ix-ax_ix.framework.core.csproj" />
-  </ItemGroup>
 
 </Project>
