--- a/src/data/src/repositories/MongoDb/Ix.Framework.Data.MongoDb.csproj
+++ b/src/data/src/repositories/MongoDb/Ix.Framework.Data.MongoDb.csproj
@@ -12,6 +12,6 @@
 		<PackageReference Include="MongoDB.Driver" Version="2.16.1" />
 		<PackageReference Include="MongoDB.Driver.Core" Version="2.16.1" />
 		<ProjectReference Include="..\..\..\..\base\src\Ix.Base.Abstractions\Ix.Base.Abstractions.csproj" />
-		<ProjectReference Include="..\..\ix.framework.data\_ix-ax_ix.framework.data.csproj" />
+		<ProjectReference Include="..\..\ix.framework.data\ix_ax_ix_framework_data.csproj" />
 	</ItemGroup>
 </Project>
