--- a/src/probers/src/ix.framework.probers/ix_ax_ix_framework_probers.csproj
+++ b/src/probers/src/ix.framework.probers/ix_ax_ix_framework_probers.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PackageId>ix.framework.utils</PackageId>
-		<RootNamespace>ix.framework.utils</RootNamespace>
+		<PackageId>ix.framework.probers</PackageId>
+		<RootNamespace>ix.framework.probers</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,7 +12,8 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.79" />
+		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.86" />
+		<PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.0-alpha.86" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -23,5 +24,9 @@
 	<ItemGroup>
 		<Folder Include=".meta\" />
 		<Content Include=".meta\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\core\src\ix.framework.core\ix_ax_ix_framework_core.csproj" />
 	</ItemGroup>
 </Project>
