change toc in docs

--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -17,3 +17,5 @@
     href: ~/articles/core/IXSEQUENCER.md  
   - name: Component
     href: ~/articles/core/IXCOMPONENT.md  
+- name: ix.framework.data
+  href: ~/articles/data/README.md
