--- a/src/abstractions/src/AXOpen.Abstractions/ix_ax_axopen_abstractions.csproj
+++ b/src/abstractions/src/AXOpen.Abstractions/ix_ax_axopen_abstractions.csproj
@@ -1,16 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PackageId>AXOpen.Utils</PackageId>
+    <RootNamespace>AXOpen.Utils</RootNamespace>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.86" />
-		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.86" />
+  <ItemGroup>
+    <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.87" />
+		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.87" />
 	</ItemGroup>
+	 
+  <ItemGroup>
+    <Folder Include=".g\" />
+    <Compile Include=".g\**" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<Compile Include=".g\**" />
-	</ItemGroup>
+  <ItemGroup>
+    <Folder Include=".meta\" />
+    <Content Include=".meta\**" />
+  </ItemGroup>
 </Project>
