--- a/src/integrations/integration.blazor/integration.blazor.csproj
+++ b/src/integrations/integration.blazor/integration.blazor.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\core\src\ix.framework.core.blazor\ix.framework.core.blazor.csproj" />
+		<ProjectReference Include="..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
 		<ProjectReference Include="..\..\data\src\ix.framework.data.blazor\ix.framework.data.blazor.csproj" />
 		<ProjectReference Include="..\..\data\src\repositories\Json\Ix.Framework.Data.Json.csproj" />
 		<ProjectReference Include="..\ix.integrations\integrations.csproj" />
