--- a/src/data/ctrl/apax.yml
+++ b/src/data/ctrl/apax.yml
@@ -1,5 +1,5 @@
-name: "@ix-ax/ix.framework.data"
-version                                                                                                                                                                                                : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.165'
+name: "@ix-ax/axopen.data"
+version                                                                                                                                                                                                    : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.166'
 type: lib
 targets:
 #  - "1500"
@@ -9,7 +9,7 @@ targets:
 files:
   - src
 dependencies:
-  "@ix-ax/axopen.core"                                                                                                                                                            : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.165'
+  "@ix-ax/axopen.core"                                                                                                                                                                : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.166'
 devDependencies:
   "@ax/sdk": 3.0.8
 
