--- a/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
+++ b/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
@@ -4,7 +4,8 @@
     <TargetFrameworks>net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>AXOpen.Core</RootNamespace>
+    <PackageId>AXOpen.Core.Blazor</PackageId>
+    <RootNamespace>AXOpen.Core.Blazor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
