--- a/src/core/src/AXOpen.Core/ix_ax_axopen_core.csproj
+++ b/src/core/src/AXOpen.Core/ix_ax_axopen_core.csproj
@@ -10,6 +10,10 @@
 	<ItemGroup>
 		<PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.87" />
 		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.87" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
