--- a/src/data/src/AXOpen.Data.Blazor/axopen_data_blazor.csproj
+++ b/src/data/src/AXOpen.Data.Blazor/axopen_data_blazor.csproj
@@ -4,7 +4,8 @@
     <TargetFrameworks>net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>AXOpen.Core</RootNamespace>
+    <PackageId>AXOpen.Data.Blazor</PackageId>
+    <RootNamespace>AXOpen.Data.Blazor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
