--- a/src/data/src/repositories/MongoDb/AXOpen.Data.MongoDb.csproj
+++ b/src/data/src/repositories/MongoDb/AXOpen.Data.MongoDb.csproj
@@ -11,6 +11,6 @@
 		<PackageReference Include="MongoDB.Bson" Version="2.19.1" />
 		<PackageReference Include="MongoDB.Driver" Version="2.19.0" />
 		<PackageReference Include="MongoDB.Driver.Core" Version="2.19.1" />
-		<ProjectReference Include="..\..\..\..\base\src\Ix.Base.Abstractions\Ix.Base.Abstractions.csproj" />
+		<ProjectReference Include="..\..\..\..\base\src\Ix.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
 	</ItemGroup>
 </Project>
