--- a/src/data/tests/Ix.Framework.Repository.Integration.Tests_L3/Ix.Framework.Repository.Integration.Tests_L3.csproj
+++ b/src/data/tests/Ix.Framework.Repository.Integration.Tests_L3/Ix.Framework.Repository.Integration.Tests_L3.csproj
@@ -22,7 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\src\repositories\MongoDb\Ix.Framework.Data.MongoDb.csproj" />
-	  <ProjectReference Include="..\..\src\repositories\RavenDb\Ix.Framework.Data.RavenDb\Ix.Framework.Data.RavenDb.csproj" />
+	  <ProjectReference Include="..\..\src\repositories\MongoDb\AXOpen.Data.MongoDb.csproj" />
+	  <ProjectReference Include="..\..\src\repositories\RavenDb\Ix.Framework.Data.RavenDb\AXOpen.Data.RavenDb.csproj" />
 	</ItemGroup>
 </Project>
