--- a/src/integrations/tests/integration.tests/integration.tests.csproj
+++ b/src/integrations/tests/integration.tests/integration.tests.csproj
@@ -35,9 +35,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-    <ProjectReference Include="..\..\..\data\src\repositories\Json\Ix.Framework.Data.Json.csproj" />
-    <ProjectReference Include="..\..\..\data\src\repositories\MongoDb\Ix.Framework.Data.MongoDb.csproj" />
-    <ProjectReference Include="..\..\..\data\src\repositories\RavenDb\Ix.Framework.Data.RavenDb\Ix.Framework.Data.RavenDb.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\MongoDb\AXOpen.Data.MongoDb.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\RavenDb\Ix.Framework.Data.RavenDb\AXOpen.Data.RavenDb.csproj" />
     <ProjectReference Include="..\..\..\probers\src\ix.framework.probers\ix_ax_ix_framework_probers.csproj" />
     <ProjectReference Include="..\..\ix.integrations\integrations.csproj" />
   </ItemGroup>
