--- a/src/messaging/src/AXOpen.Messaging/ix_ax_axopen_messaging.csproj
+++ b/src/messaging/src/AXOpen.Messaging/ix_ax_axopen_messaging.csproj
@@ -3,11 +3,17 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+    <PackageId>AXOpen.Messaging</PackageId>
+    <RootNamespace>AXOpen.Messaging</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.87" />
 		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.87" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -16,6 +22,6 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
-	  <ProjectReference Include="..\..\..\utils\src\AXOpen.Utils\ix-ax_axopen_utils.csproj" />
+	  <ProjectReference Include="..\..\..\utils\src\AXOpen.Utils\ix_ax_axopen_utils.csproj" />
 	</ItemGroup>
 </Project>
