--- a/src/integrations/ix.integrations/integrations.csproj
+++ b/src/integrations/ix.integrations/integrations.csproj
@@ -26,6 +26,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
     <ProjectReference Include="..\..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
-    <ProjectReference Include="..\..\probers\src\ix.framework.probers\ix_ax_ix_framework_probers.csproj" />
+    <ProjectReference Include="..\..\probers\src\AXOpen.Probers\ix_ax_axopen_probers.csproj" />
   </ItemGroup>
 </Project>
