--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -1,5 +1,5 @@
-name: "@ix-ax/ix.framework.probers"
-version                                                                                                                                                                   : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.175'
+name: "@ix-ax/axopen.probers"
+version                                                                                                                                                                           : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.176'
 type: lib
 targets:
 #  - "1500"
@@ -9,7 +9,7 @@ targets:
 files:
   - src
 dependencies:
-  "@ix-ax/axopen.core"                                                                                                                                                                   : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.175'
+  "@ix-ax/axopen.core"                                                                                                                                                                           : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.176'
 devDependencies:
   "@ax/sdk": 3.0.8
 variables:
