--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -1,5 +1,5 @@
-name: "integrations"
-version                                                                                                                                                                : '0.1.4-add-application-templates-for-integration-testing.174'
+name: "axopen.integrations"
+version                                                                                                                                                                       : '0.1.4-add-application-templates-for-integration-testing.184'
 type: app
 targets:
 #  - "1500"
@@ -8,9 +8,9 @@ targets:
   - plcsim
   - axunit-llvm
 dependencies:
-  "@ix-ax/axopen.core"                                                                                                                                                                 : '0.1.4-add-application-templates-for-integration-testing.174'
-  "@ix-ax/axopen.data"                                                                                                                                                                 : '0.1.4-add-application-templates-for-integration-testing.174'
-  "@ix-ax/ix.framework.probers"                                                                                                                                                              : '0.1.4-add-application-templates-for-integration-testing.174'
+  "@ix-ax/axopen.core"                                                                                                                                                                        : '0.1.4-add-application-templates-for-integration-testing.184'
+  "@ix-ax/axopen.data"                                                                                                                                                                        : '0.1.4-add-application-templates-for-integration-testing.184'
+  "@ix-ax/axopen.probers"                                                                                                                                                                     : '0.1.4-add-application-templates-for-integration-testing.184'
   "@ax/sdk": ^3.0.11
   "@ax/sld": ^0.14.2
 variables:
