--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -1,18 +1,18 @@
 name: "axosimple"
-version : '0.1.4-add-application-templates-for-integration-testing.174'
+version       : '0.1.4-add-application-templates-for-integration-testing.184'
 type: app
 registries:
   '@ix-ax': https://npm.pkg.github.com/  
 targets:
  # - "1500"
- # - axunit-llvm
+  - axunit-llvm
   - plcsim
 devDependencies:
   "@ax/sdk": 3.0.8
   "@ax/sld": ^0.14.2
 dependencies:
-   "@ix-ax/axopen.core" : '0.1.4-add-application-templates-for-integration-testing.174'
-   "@ix-ax/axopen.data" : '0.1.4-add-application-templates-for-integration-testing.174'
+   "@ix-ax/axopen.core"       : '0.1.4-add-application-templates-for-integration-testing.184'
+   "@ix-ax/axopen.data"       : '0.1.4-add-application-templates-for-integration-testing.184'
 variables:
   APAX_BUILD_ARGS: [ -d ]    
 scripts:
