--- a/src/core/src/AXOpen.Core/ix_ax_axopen_core.csproj
+++ b/src/core/src/AXOpen.Core/ix_ax_axopen_core.csproj
@@ -21,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include=".g\Onliners\AxoToggleTask\" />
 		<Folder Include=".meta\" />
 		<Content Include=".meta\**" />
 	</ItemGroup>
