--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -12,6 +12,7 @@ dependencies:
   "@ix-ax/axopen.data"                                                                                                                                                                : '0.1.4-64--NEW-FEATURE-Add-momentary-and-toggle-task-from-tco.49'
   "@ix-ax/ix.framework.probers"                                                                                                                                                             : '0.1.4-64--NEW-FEATURE-Add-momentary-and-toggle-task-from-tco.49'
   "@ax/sdk": ^3.0.11
+  "@ax/sld": ^0.14.2  
 variables:
   APAX_BUILD_ARGS: [ -d ]
 
