--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -12,8 +12,9 @@ devDependencies:
   "@ax/sld": ^0.14.2
 dependencies:
    "@ix-ax/axopen.core"            : '0.1.4-add-application-templates-for-integration-testing.192'
-   "@ix-ax/axopen.data"            : '0.1.4-add-application-templates-for-integration-testing.192'
+   "@ix-ax/axopen.data"            : '0.1.4-add-application-templates-for-integration-testing.192'   
    "@ix-ax/axopen.messaging"            : '0.1.4-add-application-templates-for-integration-testing.192'
+   "@ax/system-strings": ^4.2.3
 variables:
   APAX_BUILD_ARGS: [ -d ]    
 scripts:
