--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.95" />
-    <PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.95" />
-    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.0-alpha.95" />
+    <PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.96" />
+    <PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.96" />
+    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.0-alpha.96" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include=".g\**" />
