--- a/src/simatic1500/ctrl/apax.yml
+++ b/src/simatic1500/ctrl/apax.yml
@@ -10,7 +10,7 @@ files:
   - src
 dependencies:
   "@ax/simatic-1500": 3.0.2  
-  "@ix-ax/axopen.abstractions": '0.1.4-add-application-templates-for-integration-testing.197'
+  "@ix-ax/axopen.abstractions": '0.1.4-alpha.53'
 devDependencies:
   "@ax/sdk": 3.0.8
 
