--- a/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
+++ b/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
 	<PackageReference Include="AXSharp.Presentation.Blazor" Version="0.14.0-alpha.97" />
     <PackageReference Include="AXSharp.Presentation.Blazor.Controls" Version="0.14.0-alpha.97" />
+    <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
   </ItemGroup>
 
