--- a/src/BlazorAuthApp/BlazorAuthApp.csproj
+++ b/src/BlazorAuthApp/BlazorAuthApp.csproj
@@ -17,10 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\base\src\Ix.Base.Abstractions\Ix.Base.Abstractions.csproj" />
-    <ProjectReference Include="..\core\src\ix.framework.core.blazor\ix.framework.core.blazor.csproj" />
-    <ProjectReference Include="..\data\src\repositories\Json\Ix.Framework.Data.Json.csproj" />
-    <ProjectReference Include="..\data\src\repositories\MongoDb\Ix.Framework.Data.MongoDb.csproj" />
+    <ProjectReference Include="..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
+    <ProjectReference Include="..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
+    <ProjectReference Include="..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
+    <ProjectReference Include="..\data\src\repositories\MongoDb\AXOpen.Data.MongoDb.csproj" />
   </ItemGroup>
 
 </Project>
