--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.core"
-version                                                                                                                                                                              : '0.1.4-alpha.53'
+version                                                                                                                                                                               : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
 type: lib
 targets:
   #  - "1500"
@@ -15,5 +15,5 @@ scripts:
     - dotnet ixc
 dependencies:
   "@ax/system-timer": 3.0.9
-  "@ix-ax/axopen.abstractions"      : '0.1.4-alpha.53'
+  "@ix-ax/axopen.abstractions"       : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
  
