Security refactoring - hashing password, add ravenDB and inMemory implementation for security

--- a/src/Security/Security.csproj
+++ b/src/Security/Security.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
     <ProjectReference Include="..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
+    <ProjectReference Include="..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
     <ProjectReference Include="..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
     <ProjectReference Include="..\data\src\repositories\MongoDb\AXOpen.Data.MongoDb.csproj" />
     <ProjectReference Include="..\data\src\repositories\RavenDb\AXOpen.Data.RavenDb\AXOpen.Data.RavenDb.csproj" />
