--- a/src/data/tests/AXOpen.Data.Tests/axopen_data_tests.csproj
+++ b/src/data/tests/AXOpen.Data.Tests/axopen_data_tests.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="NSubstitute" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,6 +33,7 @@
 	</ItemGroup>
    <ItemGroup>
      <ProjectReference Include="..\..\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
+     <ProjectReference Include="..\..\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
   </ItemGroup>
   
 </Project>
