--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -5,7 +5,7 @@ registries:
   '@ix-ax': https://npm.pkg.github.com/  
 targets:
   - "1500"
-  - axunit-llvm
+  - llvm
   - plcsim
 devDependencies:
   "@ax/sdk": 3.0.8
@@ -16,6 +16,8 @@ dependencies:
    "@ix-ax/axopen.messaging"                  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
    "@ax/system-strings": ^4.2.3
    "@ix-ax/axopen.simatic1500"  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+   "@ax/axunit-library": ^4.0.6
+
 variables:
   APAX_BUILD_ARGS: [ -d ]    
 scripts:
