--- a/src/utils/ctrl/apax.yml
+++ b/src/utils/ctrl/apax.yml
@@ -5,7 +5,7 @@ targets:
   #  - "1500"
   #  - llvm
   #  - axunit
-  - axunit-llvm
+  - llvm
 files:
   - src
 devDependencies:
@@ -17,3 +17,4 @@ dependencies:
   "@ax/system-serde": ^1.3.13
   "@ax/system-bitaccess": ^5.0.4
   "@ax/system-datetime": ^3.1.3
+  "@ax/axunit-library": ^4.0.6
