AxoMessenger static view colors changed to match the verbosity

--- a/src/data/ctrl/apax.yml
+++ b/src/data/ctrl/apax.yml
@@ -1,15 +1,14 @@
 name: "@ix-ax/axopen.data"
-version                                                                                                                                                                                                                                 : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+version                                                                                                                                                                                                                                  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
 #  - "1500"
-#  - llvm
-#  - axunit
+  - axunit-llvm
   - llvm
 files:
   - src
 dependencies:
-  "@ix-ax/axopen.core"                                                                                                                                                                                             : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+  "@ix-ax/axopen.core"                                                                                                                                                                                              : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
   "@ax/axunit-library": ^4.0.6
 devDependencies:
   "@ax/sdk": 3.0.18
