--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,10 +1,10 @@
 name: "@ix-ax/axopen.core"
-version                                                                                                                                                                               : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+version                                                                                                                                                                                : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
   #  - "1500"
   #  - llvm
-  #  - axunit
+  - axunit-llvm
   - llvm
 files:
   - src
@@ -15,6 +15,6 @@ scripts:
     - dotnet ixc
 dependencies:
   "@ax/system-timer": 3.0.9
-  "@ix-ax/axopen.abstractions"       : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+  "@ix-ax/axopen.abstractions"        : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
   "@ax/axunit-library": ^4.0.6
  
