--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -1,23 +1,21 @@
 name: "axopen.integrations"
-version                                                                                                                                                                                  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+version                                                                                                                                                                                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: app
 targets:
 #  - "1500"
-#  - llvm
-  - axunit
   - plcsim
+  - axunit-llvm
   - llvm
-
 devDependencies:
   "@ax/sdk": 3.0.18
   "@ax/sld": ^0.14.2
 
 dependencies:
-  "@ix-ax/axopen.core"          : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-  "@ix-ax/axopen.data"          : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-  "@ix-ax/axopen.probers"       : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-  "@ix-ax/axopen.messaging"     : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-  "@ix-ax/axopen.simatic1500"   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+  "@ix-ax/axopen.core"           : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ix-ax/axopen.data"           : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ix-ax/axopen.probers"        : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ix-ax/axopen.messaging"      : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ix-ax/axopen.simatic1500"    : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
   "@ax/axunit-library"          : ^4.0.6
 
 variables:
