--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -1,20 +1,21 @@
 name: "axosimple"
-version                  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+version                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: app
 registries:
   '@ix-ax': https://npm.pkg.github.com/  
 targets:
   - "1500"
+  - axunit-llvm
   - llvm
   - plcsim
 devDependencies:
   "@ax/sdk": 3.0.18
   "@ax/sld": ^0.14.2
 dependencies:
-   "@ix-ax/axopen.core"                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-   "@ix-ax/axopen.data"                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-   "@ix-ax/axopen.messaging"              : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-   "@ix-ax/axopen.simatic1500"            : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+   "@ix-ax/axopen.core"                    : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+   "@ix-ax/axopen.data"                    : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+   "@ix-ax/axopen.messaging"               : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+   "@ix-ax/axopen.simatic1500"             : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
    "@ax/axunit-library"                   : ^4.0.6
 
 variables:
