--- a/src/utils/ctrl/apax.yml
+++ b/src/utils/ctrl/apax.yml
@@ -1,10 +1,9 @@
 name: "@ix-ax/axopen.utils"
-version                                                                                                                                                                                 : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+version                                                                                                                                                                                  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
   #  - "1500"
-  #  - llvm
-  #  - axunit
+  - axunit-llvm
   - llvm
 files:
   - src
