Create unit tests for messaging (tranfered from tco) (#78)
* Create draft PR for #55

* wip messaging

* AxoMessengerStatic

* AxoMessengerStatic

* AxoMesenger static tests added

* update ax/sdk =>3.0.18

* cleanup unnecessary packages from apax.yaml's

* AxoMessenger static view colors changed to match the verbosity

* build fix

---------

Co-authored-by: TomKovac <TomKovac@users.noreply.github.com>
Co-authored-by: TomKovac <61820360+TomKovac@users.noreply.github.com>

--- a/src/abstractions/ctrl/apax.yml
+++ b/src/abstractions/ctrl/apax.yml
@@ -1,14 +1,14 @@
 name: "@ix-ax/axopen.abstractions"
-version                                                                                                                                                                                                   : '0.1.4-alpha.53'
+version                                                                                                                                                                                                     : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
   - "1500"
-  - llvm
   - axunit-llvm
+  - llvm
 files:
   - bin
 devDependencies:
-  "@ax/sdk": 3.0.12
+  "@ax/sdk": 3.0.18
 dependencies:
   "@ax/system-strings": ^4.2.3
 scripts:  
