--- a/src/messaging/ctrl/apax.yml
+++ b/src/messaging/ctrl/apax.yml
@@ -1,25 +1,20 @@
 name: "@ix-ax/axopen.messaging"
-version                                                                                                                                      : '0.1.4-alpha.53'
+version : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
-  #  - "1500"
-  #  - llvm
+  # - "1500"
   #  - axunit
+  - llvm
   - axunit-llvm
 files:
   - src
 devDependencies:
-  "@ax/sdk": 3.0.8
-
+  "@ax/sdk": 3.0.18
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ax/system-strings": ^4.2.3
-  "@ax/simatic-1500-clocks": ^3.0.6
-  "@ax/system-serde": ^1.3.13
-  "@ax/system-bitaccess": ^5.0.4
-  "@ax/system-datetime": ^3.1.3
-  "@ix-ax/axopen.core"                                                                                                                                      : '0.1.4-alpha.53'
-  "@ix-ax/axopen.utils"                                                                                                                                      : '0.1.4-alpha.53'
-  "@ix-ax/axopen.abstractions"                                                                                                                                      : '0.1.4-alpha.53'
+  "@ix-ax/axopen.core" : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ix-ax/axopen.utils" : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ix-ax/axopen.abstractions" : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ax/axunit-library": ^4.0.6
