--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -1,15 +1,15 @@
 name: "@ix-ax/axopen.probers"
-version                                                                                                                                                                                  : '0.1.4-alpha.53'
+version                                                                                                                                                                                    : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
 #  - "1500"
-#  - llvm
-#  - axunit
   - axunit-llvm
+  - llvm
 files:
   - src
 dependencies:
-  "@ix-ax/axopen.core"                                                                                                                                                                                  : '0.1.4-alpha.53'
+  "@ix-ax/axopen.core"                                                                                                                                                                                    : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ax/axunit-library": ^4.0.6
 devDependencies:
   "@ax/sdk": 3.0.8
 variables:
